--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CryptoDiceRoll</title>
+  <title>Crypto Dice Roll</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script>
+    var global = global || window;
+  </script>
 </head>
-<body>
+<body style="background-color: #2c3e50">
   <app-root></app-root>
 </body>
 </html>
